--- a/signup/style.css
+++ b/signup/style.css
@@ -307,7 +307,7 @@ p{
     cursor: pointer;
 }
 .tnsd{
-    margin-left: 50px;                                                                                                                                                                                                    `   ưqsdpx;
+    margin-left: 50px;                                                                                                                                                                                               
     margin-top: -45px;
     cursor: pointer;
 }
@@ -501,7 +501,7 @@ transform: translateY(-5px);
   background: #EEEEEE;
     width: 1343px;
     height: 150px;
-    margin-top: -1px;
+    margin-top: -206px;
 }
 .visa{
   margin-left: 447px;
@@ -764,5 +764,13 @@ ul { list-style-type: none; }
 }
 .online{
   margin-left: -828px;
+}
+.home-img{
+  width: 100px;
+  height: 100px;
+}
+#home_img{
+  margin-top: -1057px;
+    margin-left: 73px;
 }
 
